Added toaster case study

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -4,6 +4,7 @@
 \usepackage{flowchart}
 \usepackage{afterpage}
 \usepackage{url}
+\usepackage{graphicx}
 \usetikzlibrary{arrows}
 \pagestyle{plain}
 \newcommand{\sR}{\mathscr{R}}
@@ -33,6 +34,7 @@
 \include{theory}
 \include{algorithm}
 \include{example}
+\include{casestudy}
 
 \bibliography{thesis}
 \bibliographystyle{plain}
