Started design section

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,11 @@
+@book{suh,
+author={Suh, Nam P.},
+title={The Principles of Design},
+publisher={Oxford University Press},
+address={New York},
+year={1990}
+}
+
 @book{chartrand,
 author={Chartrand, Gary and Zhang, Ping},
 title={A First Course in Graph Theory},
